Fixing Scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,28 @@ html,
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(23,179,8, .5);
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ef4444;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(23,179,8, .5);
+}
  
 @layer base {
   :root {
